# sdmx_explorer

./: .gitignore  README.md  client.py  client2.py  client_old.py  const.py  download.py  explore.py  init.py  main.py  pyproject.toml  repl.py  requirements.txt
docs/: download.md  explore.md
src/sdmx_explorer/: __init__.py  auth.py  context.py  display.py  download.py  explore.py  init.py  path.py  queries.py  query.py  repl.py
